@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclEvent.c,v 1.74 2007/09/06 18:13:19 dgp Exp $
+ * RCS: @(#) $Id: tclEvent.c,v 1.75 2007/09/07 15:51:25 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -356,35 +356,29 @@ TclDefaultBgErrorHandlerObjCmd(
 	tempObjv[1] = Tcl_ObjPrintf("command returned bad code: %d", code);
 	break;
     }
-    if (code == TCL_ERROR) {
-	/*
-	 * Restore important state variables to what they were at the time
-	 * the error occurred.
-	 *
-	 * Need to set the variables, not the interp fields, because
-	 * Tcl_EvalObjv calls Tcl_ResetResult which would destroy
-	 * anything we write to the interp fields.
-	 */
-
-	TclNewLiteralStringObj(keyPtr, "-errorcode");
-	Tcl_IncrRefCount(keyPtr);
-	Tcl_DictObjGet(NULL, objv[2], keyPtr, &valuePtr);
-	Tcl_DecrRefCount(keyPtr);
-	if (valuePtr) {
-	    Tcl_SetVar2Ex(interp, "errorCode", NULL, valuePtr, TCL_GLOBAL_ONLY);
-	}
-
-	TclNewLiteralStringObj(keyPtr, "-errorinfo");
-	Tcl_IncrRefCount(keyPtr);
-	Tcl_DictObjGet(NULL, objv[2], keyPtr, &valuePtr);
-	Tcl_DecrRefCount(keyPtr);
-	if (valuePtr) {
-	    Tcl_SetVar2Ex(interp, "errorInfo", NULL, valuePtr, TCL_GLOBAL_ONLY);
-	}
-    } else {
-	Tcl_AppendObjToErrorInfo(interp, Tcl_DuplicateObj(tempObjv[1]));
-    }
     Tcl_IncrRefCount(tempObjv[1]);
+
+    TclNewLiteralStringObj(keyPtr, "-errorcode");
+    Tcl_IncrRefCount(keyPtr);
+    Tcl_DictObjGet(NULL, objv[2], keyPtr, &valuePtr);
+    Tcl_DecrRefCount(keyPtr);
+    if (valuePtr) {
+	Tcl_SetObjErrorCode(interp, valuePtr);
+    }
+
+    TclNewLiteralStringObj(keyPtr, "-errorinfo");
+    Tcl_IncrRefCount(keyPtr);
+    Tcl_DictObjGet(NULL, objv[2], keyPtr, &valuePtr);
+    Tcl_DecrRefCount(keyPtr);
+    if (valuePtr) {
+	if (code != TCL_ERROR) {
+	    Tcl_SetObjResult(interp, tempObjv[1]);
+	}
+	Tcl_IncrRefCount(valuePtr);
+	Tcl_AppendObjToErrorInfo(interp, valuePtr);
+    }
+
+    /* Capture stack trace now, so we can report it if [bgerror] fails. */
     valuePtr = Tcl_GetVar2Ex(interp, "errorInfo", NULL, TCL_GLOBAL_ONLY);
     Tcl_IncrRefCount(valuePtr);
 
